//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  username String
  profileImage Media
  zones Zone [not null]
  routes Route [not null]
  projects Project [not null]
  sessions Session [not null]
  roles Role [not null]
  images Media [not null]
  preferences UserPreferences
  emailValidationCode ValidationCode
  emailValidated Boolean [not null, default: false]

  indexes {
    (id, email) [unique]
  }
}

Table Zone {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String
  type ZoneType [not null, default: 'outdoors']
  public Boolean [not null, default: false]
  author User
  authorId String
  routes Route [not null]

  indexes {
    (authorId, id) [unique]
  }
}

Table Route {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String
  public Boolean [not null, default: false]
  grade Grade [not null, default: 'uknown']
  discipline RouteDiscipline [not null, default: 'other']
  images Media [not null]
  projects Project [not null]
  author User
  authorId String
  zone Zone
  zoneId String

  indexes {
    (authorId, id) [unique]
  }
}

Table Project {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  public Boolean [not null, default: false]
  route Route
  routeId String
  author User
  authorId String
  sessions Session [not null]

  indexes {
    (routeId, id) [unique]
  }
}

Table Session {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  description String
  notes String [not null]
  public Boolean [not null, default: false]
  project Project
  projectId String
  author User
  authorId String
  ascent_date DateTime
  start_date DateTime
  end_date DateTime
  has_ascent Boolean [not null, default: false]
  tries Int [not null, default: 0]

  indexes {
    (authorId, id) [unique]
  }
}

Table Media {
  id String [pk, unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  mimetype String [not null]
  filename String [not null]
  path String [not null]
  size Int [not null]
  author User [not null]
  authorId String [not null]
  user User
  userId String [unique]
  route Route
  routeId String
}

Table UserPreferences {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  preferredDiscipline RouteDiscipline [not null, default: 'lead']
  enableVibration Boolean [not null, default: true]
  author User
  authorId String [unique]

  indexes {
    (authorId, id) [unique]
  }
}

Table ValidationCode {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  code String [not null]
  author User [not null]
  authorId String [unique, not null]

  indexes {
    (authorId, id) [unique]
  }
}

Enum Role {
  ADMIN
  USER
}

Enum RouteDiscipline {
  lead
  boulder
  trad
  dws
  other
}

Enum ZoneType {
  outdoors
  indoors
  ice
  other
}

Enum Grade {
  g3
  g4
  g5
  g6A
  g6AP
  g6B
  g6BP
  g6C
  g6CP
  g7A
  g7AP
  g7B
  g7BP
  g7C
  g7CP
  g8A
  g8AP
  g8B
  g8BP
  g8C
  g8CP
  g9A
  g9AP
  g9B
  g9BP
  g9C
  g9CP
  uknown
}

Ref: Zone.authorId > User.id

Ref: Route.authorId > User.id

Ref: Route.zoneId > Zone.id

Ref: Project.routeId > Route.id

Ref: Project.authorId > User.id

Ref: Session.projectId > Project.id

Ref: Session.authorId > User.id

Ref: Media.authorId - User.id

Ref: Media.userId - User.id

Ref: Media.routeId > Route.id

Ref: UserPreferences.authorId - User.id

Ref: ValidationCode.authorId - User.id